# app-architecture-template

./: .agents.yml  .env.example  .gitignore  AGENTS.md  ARCHITECTURE-FIDELITY-100-COMPLETE.md  ARCHITECTURE-FIDELITY-95-COMPLETE.md  ARCHITECTURE-FIDELITY-COMPLETE.md  ARCHITECTURE-FIDELITY-SUMMARY.md  GITHUB-ISSUES-STATUS.md  GITHUB-ISSUES-SUMMARY.md  Makefile  QUICKSTART.md  README.md  VALIDATION_HARNESS.md  app-architecture-template-full.pptx  app-architecture-template-marketing.pptx  boilerplate-parity-report.md  docker-compose.e2e.yml  docker-compose.nestjs.yml  docker-compose.standalone.yml  docker-compose.traefik.yml  docker-compose.yml  feature-list.json  issues-found-cody-test.md  lefthook.yml  package-lock.json  playwright.config.ts
boilerplate/python/order-service/: .env.example  .importlinter  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Makefile  README.md  bruno-environment.json  docker-compose.yml  feature-list.json  mvp_example.md  pyproject.toml  pytest.ini
boilerplate/python/order-service/alembic/versions/: 002_create_workflow_executions.py  003_add_version_to_orders.py  004_align_outbox_events_schema.py
boilerplate/python/order-service/order-service-python/alembic/: env.py
boilerplate/python/order-service/order-service-python/src/: main.py
boilerplate/python/order-service/order-service-python/src/application/: dtos.py
boilerplate/python/order-service/order-service-python/src/domain/: order.py  order_id.py
boilerplate/python/order-service/src/: __init__.py  main.py
boilerplate/python/order-service/src/application/: __init__.py  dtos.py
boilerplate/python/order-service/src/application/usecases/: __init__.py  auth_use_case_impl.py  auth_use_cases.py  auth_utils.py  get_order_use_case.py
boilerplate/python/order-service/src/domain/: order.py  order_id.py  order_item.py
boilerplate/python/order-service/src/domain/events/: order_placed.py  user_events.py
boilerplate/python/order-service/src/domain/models/: __init__.py  mfa_method.py  user.py
boilerplate/python/order-service/src/domain/ports/: auth_ports.py  event_publisher.py  order_repository.py
boilerplate/python/order-service/src/domain/services/: auth_service.py  order_placement_service.py
boilerplate/python/order-service/src/infrastructure/: config.py
boilerplate/python/order-service/src/infrastructure/api/: auth_controller.py  controller.py  dependencies.py  exception_handlers.py  factory.py  workflow_router.py
boilerplate/python/order-service/src/infrastructure/cache/: cache_invalidation_service.py
boilerplate/python/order-service/src/infrastructure/health/: database_health_indicator.py
boilerplate/python/order-service/src/infrastructure/logging/: correlation_id_middleware.py  security_audit_logger.py
boilerplate/python/order-service/src/infrastructure/persistence/: __init__.py  mapper.py  mfa_mapper.py  models.py  outbox.py  sqlalchemy_order_repository.py  sqlalchemy_user_repository.py
boilerplate/python/order-service/src/infrastructure/security/: bcrypt_password_hasher.py  (+1 more)
boilerplate/python/order-service/tests/: conftest.py
boilerplate/python/order-service/tests/application/: __init__.py
boilerplate/python/order-service/tests/archunit/: __init__.py  test_architecture.py  test_architecture_v2.py  test_comprehensive_architecture.py  test_simple.py
boilerplate/python/order-service/tests/integration/: test_order_api_integration.py
(+1237 files in other folders)
