[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "order-service"
version = "1.0.0"
description = "Order Service - Clean Architecture Python FastAPI"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
pydantic = "^2.7.0"
pydantic-settings = "^2.2.0"
sqlalchemy = "^2.0.30"
alembic = "^1.13.0"
psycopg2-binary = "^2.9.9"
prometheus-fastapi-instrumentator = "^7.0.0"
python-dotenv = "^1.0.0"
structlog = "^24.1.0"
bcrypt = "^4.1.0"
PyJWT = "^2.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
httpx = "^0.26.0"
import-linter = "^2.0"
pre-commit = "^3.6.0"
lefthook = "^1.6.0"

[tool.poetry.scripts]
migrate = "alembic.command:upgrade"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.importlinter]
root_packages = ["src"]
include_external_packages = true

[[tool.importlinter.contracts]]
name = "Domain layer is pure"
type = "forbidden"
source_modules = ["src.domain"]
forbidden_modules = [
    "fastapi",
    "sqlalchemy",
    "pydantic",
    "uvicorn",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

